# Capsion-Run-Command

./: .cps_run_commands.histroy  .gitignore  README.md  main.py  pyproject.toml  tree.txt
.github/workflow/: test.yaml
.github/workflows/: relese.yaml  test.yaml
.sublime/: Context.sublime-menu  Default.sublime-commands  Default.sublime-keymap  cps.sublime-settings
core/: history.py  historyManager.py  scriptsParser.py  settingManager.py  shell.py  utils.py
scripts/: test.py
